Day33-Ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: ingress
 labels:
   app: flask
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
     containers:
     - name: ingress
       image: palaymoundekar/flask:v1
       ports:
       - containerPort: 80
