Day33-Ingress/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: ingress
spec:
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
